// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test core API test cssR test snapshot 1`] = `
@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

<button
  className="c0"
/>
`;

exports[`test core API test styleHOC test snapshot 1`] = `
.c0 {
  color: blue;
  width: 150px;
}

@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

@media (min-width:1200px) {
  .c0 {
    width: 250px;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    width: 350px;
  }
}

<button
  className="c0"
  color="yellow"
  width={50}
/>
`;

exports[`test core API test styledR test snapshot 1`] = `
.c0 {
  color: blue;
  width: 150px;
}

@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

@media (min-width:1200px) {
  .c0 {
    width: 250px;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    width: 350px;
  }
}

<button
  className="c0"
  color="red"
  width={50}
/>
`;
